--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sign-language",
+  "homepage": "https://Kartheek1106.github.io/sign-language",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@mui/material": "^5.13.4",
     "@tensorflow/tfjs": "^4.6.0",
     "bootstrap": "^5.3.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
